add/global-changes

--- a/Autonuoma/appsettings.json
+++ b/Autonuoma/appsettings.json
@@ -1,11 +1,12 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
-	"AllowedHosts": "*",
-	"DbConnStr": "Data Source=127.0.0.1;port=3306;Initial Catalog=autonuoma;User Id=nojsta;Password=root;SslMode=None;Convert Zero Datetime=True;",
-	"TblPrefix": "pavyzdys_"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "DbConnStr": "Data Source=127.0.0.1;port=3306;Initial Catalog=autodet_04-03;User Id=nojsta;Password=root;SslMode=None;Convert Zero Datetime=True;",
+  "TblPrefix": "pavyzdys_"
 }
